[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customer-support"
version = "0.1.0"
description = "Customer support reinforcement-learning environment packaged for OpenEnv-style deployment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "openai>=1.0.0",
]

[project.scripts]
server = "server:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/ankit19an/openenv-customer-support"
Repository = "https://github.com/ankit19an/openenv-customer-support"

[tool.setuptools]
py-modules = ["server", "env", "graders", "models", "tasks", "inference"]
packages = ["my_env"]
